@@ -21,7 +21,7 @@
 
 #define YY_NO_UNPUT
 
-#if 1
+#if 0
 #define LEXOUT(s)  printf s /* used ONLY when debugging */
 #else
 #define LEXOUT(s)
